src/objects/CH_Problem_RnD_Reference__c.object
<CustomObject>
    <description>R&amp;D Interaction</description>
    <fields>
        <fullName>CH_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_Error_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Error_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Originating_Incident__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originating Incident</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Related_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Record</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>R&amp;D Interactions</relationshipLabel>
        <relationshipName>CH_R_D_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Related_RnD_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related R&amp;D Interaction</label>
        <referenceTo>CH_Problem_RnD_Reference__c</referenceTo>
        <relationshipLabel>R&amp;D Interactions</relationshipLabel>
        <relationshipName>CH_RnD_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_RnD_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_RnD_Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_RnD_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_RnD_Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>inbound</fullName>
                </value>
                <value>
                    <fullName>outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_RnD_Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_RnD_Interface__c</fullName>
        <label>Interface Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>PRONTO</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_RnD_Reference__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>R&amp;D Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_RnD_Status__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_RnD_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_RnD_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information Update</fullName>
                </value>
                <value>
                    <fullName>Update from R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                </value>
                <value>
                    <fullName>Cancel Information Request</fullName>
                </value>
                <value>
                    <fullName>Workaround</fullName>
                </value>
                <value>
                    <fullName>Correction Plan</fullName>
                </value>
                <value>
                    <fullName>Correction Response</fullName>
                </value>
                <value>
                    <fullName>Correction Not Needed</fullName>
                </value>
                <value>
                    <fullName>Failed R&amp;D Interaction</fullName>
                </value>
                <value>
                    <fullName>Successful R&amp;D Interaction</fullName>
                </value>
                <value>
                    <fullName>Transfer to R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Information Response</fullName>
                </value>
                <value>
                    <fullName>Workaround Rejected</fullName>
                </value>
                <value>
                    <fullName>Workaround Accepted</fullName>
                </value>
                <value>
                    <fullName>Correction Rejected</fullName>
                </value>
                <value>
                    <fullName>Update to R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Severity Change</fullName>
                </value>
                <value>
                    <fullName>Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Update Contact</fullName>
                    <isActive>false</isActive>
                    <label>Update Contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>R&amp;D Interaction</label>
    <nameField>
        <displayFormat>RD-{000000}</displayFormat>
        <label>R&amp;D Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R&amp;D Interactions</pluralLabel>
    <recordTypes>
        <fullName>Correction</fullName>
        <active>true</active>
        <label>Correction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Failed</fullName>
        <active>true</active>
        <label>Failed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inbound</fullName>
        <active>true</active>
        <label>Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Information_Request</fullName>
        <active>true</active>
        <label>Information Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open</fullName>
        <active>true</active>
        <label>Open</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound</fullName>
        <active>true</active>
        <label>Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer_To_RnD</fullName>
        <active>true</active>
        <label>Transfer To R&amp;D</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workaround</fullName>
        <active>true</active>
        <label>Workaround</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>